{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 47,
  "lineage": "1e913924-f296-ba67-4251-40f999c9e53d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bbcf36c86bfca54",
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:elastic-ip/eipalloc-08bbcf36c86bfca54",
            "domain": "vpc",
            "id": "eipalloc-08bbcf36c86bfca54",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-74-171-184.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.171.184",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-ngw-eip"
            },
            "tags_all": {
              "Name": "msk-ngw-eip",
              "Project": "wsc2026-msk"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "eipalloc-08bbcf36c86bfca54",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:internet-gateway/igw-0d3dd7dbfe801b9b8",
            "id": "igw-0d3dd7dbfe801b9b8",
            "owner_id": "412869002243",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-igw"
            },
            "tags_all": {
              "Name": "msk-igw",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "igw-0d3dd7dbfe801b9b8",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08bbcf36c86bfca54",
            "association_id": "eipassoc-0f3e5694e5ff1a804",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-00092f8fbbdf183ab",
            "network_interface_id": "eni-018ed6b314ffff5f7",
            "private_ip": "192.168.0.217",
            "public_ip": "35.74.171.184",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09d8cf1729a78a5bd",
            "tags": {
              "Name": "msk-ngw"
            },
            "tags_all": {
              "Name": "msk-ngw",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "nat-00092f8fbbdf183ab",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_eip.ngw",
            "aws_internet_gateway.igw",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "msk-priv-a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03765509a76ddfca31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00092f8fbbdf183ab",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-03765509a76ddfca3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-03765509a76ddfca3"
          },
          "dependencies": [
            "aws_eip.ngw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-priv-d",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0563242e2beec51161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00092f8fbbdf183ab",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0563242e2beec5116",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0563242e2beec5116"
          },
          "dependencies": [
            "aws_eip.ngw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d3dd7dbfe801b9b8",
            "id": "r-rtb-0f0ca2a3ef3033edb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0f0ca2a3ef3033edb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0f0ca2a3ef3033edb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "msk-priv-a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:route-table/rtb-03765509a76ddfca3",
            "id": "rtb-03765509a76ddfca3",
            "owner_id": "412869002243",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "msk-priv-a-rtb"
            },
            "tags_all": {
              "Name": "msk-priv-a-rtb",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtb-03765509a76ddfca3",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-priv-d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:route-table/rtb-0563242e2beec5116",
            "id": "rtb-0563242e2beec5116",
            "owner_id": "412869002243",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "msk-priv-d-rtb"
            },
            "tags_all": {
              "Name": "msk-priv-d-rtb",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtb-0563242e2beec5116",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:route-table/rtb-0f0ca2a3ef3033edb",
            "id": "rtb-0f0ca2a3ef3033edb",
            "owner_id": "412869002243",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "msk-pub-rtb"
            },
            "tags_all": {
              "Name": "msk-pub-rtb",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtb-0f0ca2a3ef3033edb",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "msk-priv-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8593b316b420207",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-03765509a76ddfca3",
            "subnet_id": "subnet-0552e005c00f84990"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtbassoc-0a8593b316b420207",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-priv-d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a7b0e6e7a0971d5",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0563242e2beec5116",
            "subnet_id": "subnet-0fa8353b72097156e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtbassoc-07a7b0e6e7a0971d5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "msk-pub-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9600029018e9336",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0f0ca2a3ef3033edb",
            "subnet_id": "subnet-09d8cf1729a78a5bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtbassoc-0b9600029018e9336",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.pub",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-pub-d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02069d319b8e6ed75",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0f0ca2a3ef3033edb",
            "subnet_id": "subnet-0b6a4998cbf084260"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "rtbassoc-02069d319b8e6ed75",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_route_table.pub",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group/sg-0fee2cd723accad73",
            "description": "Producer EC2",
            "egress": [],
            "id": "sg-0fee2cd723accad73",
            "ingress": [],
            "name": "wsc2026-msk-producer-sg",
            "name_prefix": "",
            "owner_id": "412869002243",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-msk-producer-sg"
            },
            "tags_all": {
              "Name": "wsc2026-msk-producer-sg",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sg-0fee2cd723accad73",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group/sg-087b3acc276be9d4b",
            "description": "Lambda VPC ENI",
            "egress": [],
            "id": "sg-087b3acc276be9d4b",
            "ingress": [],
            "name": "wsc2026-msk-lambda-sg",
            "name_prefix": "",
            "owner_id": "412869002243",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-msk-lambda-sg"
            },
            "tags_all": {
              "Name": "wsc2026-msk-lambda-sg",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sg-087b3acc276be9d4b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group/sg-0cc3f3b2d4f555a38",
            "description": "MSK broker access (IAM SASL 9098)",
            "egress": [],
            "id": "sg-0cc3f3b2d4f555a38",
            "ingress": [],
            "name": "wsc2026-msk-cluster-sg",
            "name_prefix": "",
            "owner_id": "412869002243",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-msk-cluster-sg"
            },
            "tags_all": {
              "Name": "wsc2026-msk-cluster-sg",
              "Project": "wsc2026-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sg-0cc3f3b2d4f555a38",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "msk-priv-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:subnet/subnet-0552e005c00f84990",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0552e005c00f84990",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-priv-a"
            },
            "tags_all": {
              "Name": "msk-priv-a",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "subnet-0552e005c00f84990",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-priv-d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:subnet/subnet-0fa8353b72097156e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa8353b72097156e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-priv-d"
            },
            "tags_all": {
              "Name": "msk-priv-d",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "subnet-0fa8353b72097156e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-pub-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:subnet/subnet-09d8cf1729a78a5bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d8cf1729a78a5bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-pub-a"
            },
            "tags_all": {
              "Name": "msk-pub-a",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "subnet-09d8cf1729a78a5bd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "msk-pub-d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:subnet/subnet-0b6a4998cbf084260",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6a4998cbf084260",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-pub-d"
            },
            "tags_all": {
              "Name": "msk-pub-d",
              "Project": "wsc2026-msk"
            },
            "vpc_id": "vpc-04530b578ac93f89b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "subnet-0b6a4998cbf084260",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:vpc/vpc-04530b578ac93f89b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-053b9a356e6ecae90",
            "default_route_table_id": "rtb-042667df4c08084b1",
            "default_security_group_id": "sg-00d1d4fe7d8de1f7c",
            "dhcp_options_id": "dopt-0e3667a61dca379c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04530b578ac93f89b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042667df4c08084b1",
            "owner_id": "412869002243",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "msk-vpc"
            },
            "tags_all": {
              "Name": "msk-vpc",
              "Project": "wsc2026-msk"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "vpc-04530b578ac93f89b",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-06c14e05e96b8ca5c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "outbound all (NAT, MSK, AWS API)",
            "from_port": null,
            "id": "sgr-06c14e05e96b8ca5c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0fee2cd723accad73",
            "security_group_rule_id": "sgr-06c14e05e96b8ca5c",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-06c14e05e96b8ca5c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lambda_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-054481638b6e0c768",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "outbound all",
            "from_port": null,
            "id": "sgr-054481638b6e0c768",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-087b3acc276be9d4b",
            "security_group_rule_id": "sgr-054481638b6e0c768",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-054481638b6e0c768",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "msk_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-0ab983229cdf1a558",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ab983229cdf1a558",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0cc3f3b2d4f555a38",
            "security_group_rule_id": "sgr-0ab983229cdf1a558",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-0ab983229cdf1a558",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "9092",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-05df93e36c3c004ed",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "kafka 9092 from producer",
            "from_port": 9092,
            "id": "sgr-05df93e36c3c004ed",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fee2cd723accad73",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0cc3f3b2d4f555a38",
            "security_group_rule_id": "sgr-05df93e36c3c004ed",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": 9092
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-05df93e36c3c004ed",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "9094",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-0087227d93b3efd67",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "kafka 9094 from producer",
            "from_port": 9094,
            "id": "sgr-0087227d93b3efd67",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fee2cd723accad73",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0cc3f3b2d4f555a38",
            "security_group_rule_id": "sgr-0087227d93b3efd67",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": 9094
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-0087227d93b3efd67",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "9098",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-04c27329f3a197bf8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "kafka 9098 from producer",
            "from_port": 9098,
            "id": "sgr-04c27329f3a197bf8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fee2cd723accad73",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0cc3f3b2d4f555a38",
            "security_group_rule_id": "sgr-04c27329f3a197bf8",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-04c27329f3a197bf8",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_from_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-0ec3d76b7891f365e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "SASL_SSL(IAM) from lambda vpc eni",
            "from_port": 9098,
            "id": "sgr-0ec3d76b7891f365e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-087b3acc276be9d4b",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0cc3f3b2d4f555a38",
            "security_group_rule_id": "sgr-0ec3d76b7891f365e",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-0ec3d76b7891f365e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:412869002243:security-group-rule/sgr-0fc1f142531990cd4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "self reference for Lambda MSK event source ENI",
            "from_port": 0,
            "id": "sgr-0fc1f142531990cd4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0cc3f3b2d4f555a38",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0cc3f3b2d4f555a38",
            "security_group_rule_id": "sgr-0fc1f142531990cd4",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-msk"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "412869002243",
            "id": "sgr-0fc1f142531990cd4",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "aws_security_group.msk",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}